# Sentinel-Ops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISCLAIMER.md  Dockerfile  NOTICE  README.md  SECURITY.md  TERMS_OF_USE.md  compose.production.yaml  compose.yaml  pyproject.toml
.claude/agents/: sentinelops-ops-copilot.md
.claude/skills/sentinelops-check/: SKILL.md
.claude/skills/sentinelops-investigate/: SKILL.md
.claude/skills/sentinelops-pull-models/: SKILL.md
.claude/skills/sentinelops-start/: SKILL.md
.clinerules/: sentinelops-repo.md
.cursor/rules/: sentinelops-repo.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.windsurf/rules/: sentinelops-repo.md
app/: __init__.py  agent_integrations.py  audit.py  auth.py  bootstrap.py  cache.py  cli.py  confidence.py  dependencies.py  evaluation.py  http_errors.py  http_runtime.py  log_utils.py  main.py  metadata_store.py  ollama_client.py  persistence.py  prompts.py  runtime_metrics.py  schemas.py  settings.py  startup.py  telemetry.py
app/api/: __init__.py
app/api/routers/: __init__.py  analysis.py  console.py  evaluation.py  knowledge.py  system.py  workflow.py
app/rag/: chroma_runtime.py  chroma_store.py  chunker.py  loader.py  models.py  service.py  simple_store.py  store_factory.py  utils.py
app/services/: analyze_service.py  console_service.py  evaluation_service.py  investigation_service.py  root_cause_engine.py  runtime_health_service.py  workflow_service.py
app/static/: console.css  console.html  console.js
app/tools/: file_tools.py  incident_tools.py  tool_registry.py
app/workflows/: nodes.py  sentinel_graph.py  state.py
config/: sentinelops.production.toml  sentinelops.toml
data/chroma/: chroma.sqlite3
data/eval_cases/: api-rate-limit-011.json  authentication-bruteforce-003.json  configuration-missing-env-005.json  configuration-redis-013.json  database-deadlock-012.json  database-timeout-001.json  deployment-readiness-014.json  disk-full-004.json  memory-oom-007.json  memory-swap-018.json  network-dns-002.json  network-packet-loss-017.json  performance-cpu-008.json  queue-backlog-009.json  security-cert-010.json  security-ransomware-015.json  service-502-006.json  service-crash-016.json
data/incident_library/: 01-database-workflow.json  02-network-investigation.json  03-deployment-analysis.json  04-queue-approval.json  05-service-resilience.json
data/incident_templates/: api.md  authentication.md  configuration.md  database.md  deployment.md  disk.md  memory.md  network.md  performance.md  queue.md  security.md  service.md
data/knowledge/github_issues/: api-rate-limit-issue.md  db-pool-exhaustion-issue.md  dns-failover-regression-issue.md  worker-segfault-issue.md
data/knowledge/readmes/: edge-gateway-readme.md  identity-service-readme.md  payments-service-readme.md  platform-observability-readme.md
data/knowledge/runbooks/: database-timeout-runbook.md  deployment-readiness-runbook.md  network-dns-runbook.md  queue-backlog-runbook.md  security-certificate-runbook.md
data/knowledge/troubleshooting_notes/: auth-lockout-note.md  disk-pressure-note.md  memory-swap-note.md  queue-lag-note.md  readiness-missing-config-note.md  service-502-note.md
data/rag_eval_cases/: api-rate-limit-search-001.json  authentication-lockout-search-002.json  database-timeout-search-003.json  deployment-readiness-search-004.json  disk-pressure-search-005.json  memory-swap-search-006.json  network-dns-search-007.json  queue-backlog-search-008.json  security-certificate-search-009.json  service-crash-search-010.json
data/recent_incidents/: 20260328T141500Z-database.json  20260329T091000Z-network.json  20260330T021500Z-authentication.json  20260330T150500Z-service.json
data/reference_incidents/: 20260328T141500Z-database.json  20260330T150500Z-service.json
data/runtime/audit/: audit.sqlite
data/runtime/recent_incidents/: 20260406T045437216425Z-database.json  20260406T045750087863Z-database.json  20260406T051536254119Z-database.json  20260407T005349061295Z-database.json  20260407T005356333667Z-database.json  (+20 more)
data/tool_eval_cases/: authentication-grep-003.json  configuration-deployment-005.json  database-investigation-001.json  disk-pressure-004.json  network-compare-002.json  performance-cpu-009.json  queue-backlog-006.json  safe-failure-history-010.json  security-ransomware-008.json  service-restarts-007.json
docs/: architecture.md  commercial-and-enterprise-usage.md  incident-library.md  interview-story.md  liability-and-use-boundaries.md  operational-risk-and-human-review.md  operator-walkthrough.md  repo-copilot-validation.md  resume-bullets.md  video-walkthrough.md
docs/agents/: README.md  all-agents.md  claude-code.md  cline.md  codex.md  cursor.md  github-copilot.md  local-only.md  windsurf.md
scripts/: check_chroma_wsl.ps1  install_sentinelops.ps1  install_sentinelops.sh  run_eval.py  run_eval_summary.py  run_operations_report.py  run_repo_live_check.py  setup_chroma_wsl.ps1  start_chroma_wsl.ps1  start_sentinelops.ps1  stop_chroma_wsl.ps1
tests/: test_agent_integrations.py  test_bootstrap.py  test_chroma_store.py  test_console_surface.py  test_eval_smoke.py  test_eval_summary.py  test_file_tools.py  test_investigate_eval.py  test_live_stack.py  test_month5_runtime.py  test_rag_eval.py  test_repo_local_retrieval.py  test_root_cause_engine.py  test_runtime_surface.py  test_workflow_api.py  test_workflow_eval.py  test_workspace_loader.py
(+2 files in other folders)
