[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-ops"
version = "0.8.0"
requires-python = ">=3.11"
description = "Plug-and-play incident copilot with local and enterprise deployment profiles."
readme = "README.md"
dependencies = [
    "chromadb==0.4.24",
    "fastapi>=0.135.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "numpy<2",
    "ollama>=0.6.1",
    "onnxruntime>=1.17,<1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pg8000>=1.31.5",
    "posthog>=2.4,<3",
    "pydantic-settings>=2.13.1",
    "psycopg[binary,pool]>=3.2.9",
    "PyJWT[crypto]>=2.10.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "SQLAlchemy>=2.0.39",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
sentinelops = "app.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: exercises live dependencies such as Ollama and Chroma when explicitly enabled",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "app/_bundled/config"
"data/incident_library" = "app/_bundled/data/incident_library"
"data/incident_templates" = "app/_bundled/data/incident_templates"
"data/knowledge" = "app/_bundled/data/knowledge"
"data/logs" = "app/_bundled/data/logs"
"data/reference_incidents" = "app/_bundled/data/reference_incidents"
"samples" = "app/_bundled/samples"
"LICENSE" = "app/_bundled/LICENSE"
"NOTICE" = "app/_bundled/NOTICE"
"DISCLAIMER.md" = "app/_bundled/DISCLAIMER.md"
"TERMS_OF_USE.md" = "app/_bundled/TERMS_OF_USE.md"
"docs/liability-and-use-boundaries.md" = "app/_bundled/docs/liability-and-use-boundaries.md"
"docs/operational-risk-and-human-review.md" = "app/_bundled/docs/operational-risk-and-human-review.md"

[tool.hatch.build.targets.sdist]
include = [
    "/.claude",
    "/.clinerules",
    "/.cursor",
    "/.github/copilot-instructions.md",
    "/.windsurf",
    "/AGENTS.md",
    "/app",
    "/CLAUDE.md",
    "/config",
    "/data/incident_library",
    "/data/incident_templates",
    "/data/knowledge",
    "/data/logs",
    "/data/reference_incidents",
    "/docs/assets",
    "/samples",
    "/scripts",
    "/tests",
    "/LICENSE",
    "/NOTICE",
    "/DISCLAIMER.md",
    "/TERMS_OF_USE.md",
    "/README.md",
    "/SECURITY.md",
    "/docs/liability-and-use-boundaries.md",
    "/docs/operational-risk-and-human-review.md",
    "/compose.yaml",
    "/compose.production.yaml",
]
